Minor updates. Responsive problem arises <548px (not yet fixed)

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
               </g>
           </g>
       </svg>
+
+      <div class="skip_btn" id="skip_loadingAnimation">
+        <h6 class="centered-text">Skip</h6>
+      </div>  
     </div>
   </div>
 
@@ -139,7 +143,7 @@
     <h2 class="in-out-el">
         I am a multidisciplinary product enthusiast<br />
     </h2>
-      <h3 class="in-out-el"> I believe in <span style="color: #197FCD"><b>Science</b></span>, revere <span style="color: #C00897;"><b>Technology</b></span>, and take joy in the <span style="color: #FEB507"><b>Aesthetic</b></span> </h3>
+      <h4 class="in-out-el"> I believe in <span style="color: #197FCD"><b>Science</b></span>, revere <span style="color: #C00897;"><b>Technology</b></span>, and take joy in the <span style="color: #FEB507"><b>Aesthetic</b></span> </h4>
 
       <span class="scroll-icon in-out-el">
         <span class="scroll-wheel"></span>
@@ -286,7 +290,7 @@
 <section class="flex-column" id="more-works">
   <!-- <h2 class="in-out-el" style="text-align: center;">A bit more to see, if you fancy</h2> -->
   <h3 class="in-out-el">Other Projects</h3>
-  <div class="logos">
+  <div class="logos in-out-el">
     <img class="in-out-el logo" src="Assets/logo_my7.png">
     <img class="in-out-el logo" src="Assets/logo_shavershop.png">
     <img class="in-out-el logo" src="Assets/logo_oxford.png">
@@ -296,18 +300,15 @@
     <img class="in-out-el logo" src="Assets/logo_safemeat.svg">
     <img class="in-out-el logo" src="Assets/logo_expatla.png">
     <img class="in-out-el logo" src="Assets/logo_freshfrom.png">
-
-
   </div>
   <a class="big-link in-out-el" href="./works.html" target="_blank"><h5>View More</h5></a>
-  <!-- <span class= "in-out-el" style="position: relative; bottom: -15vh"><p style="font-weight: 400; letter-spacing: .02em"><i>P.S. I also built this website from scratch using HTML5, CSS, and some JS libraries. Amateur, I know. But hey, it works :)</i></p></span> -->
 </section>
 
 
 
 
 <section class="flex-column" id="contact-me">
-  <h3 class="in-out-el" style="text-align: center;">Thank you for making it this far</h3>
+  <h4 class="in-out-el" style="text-align: center;">Thank you for making it this far</h4>
   <a class="in-out-el colorful-link" id="home-mailto" target="_blank"
     href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut" title="Shoot me a line"><h1 style="text-align:center;">Let's talk</h1></a>
     
