Home Intro responsive FIXED

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
  
  <div class="opening_line">
   <h1 class="in-out-el" id="intro_text">Hi, I'm Nhut</h1>
-  <span><h2 class="in-out-el" id="intro_sub_text">UX/UI/Product Designer</h2></span>
+  <h2 class="in-out-el" id="intro_sub_text">UX/UI/Product Designer</h2>
 </div>
 
     <!-- CTA arrow for next page -->
