Added Portfolio to Works Page

--- a/works.html
+++ b/works.html
@@ -109,13 +109,6 @@
             <img alt="SA Logo" src="./Assets/logo_rr.png" />
           </a>
         </div>
-      <!-- </div> -->
-
-    <!-- </div> -->
-
-
-    <!-- <div class="tile-set"> -->
-      <!-- <div class="work-tiles"> -->
 
         <div class="work-tile block-in">
           <div id="tile_Danias"></div>
@@ -124,6 +117,15 @@
             <p>Real Quick Website Design</p>
           </a>
         </div>
+
+         <div class="work-tile block-in">
+           <div class="tile_static" id="tile_Portfolio">
+            <h4>Self Improvement</h4>
+            <p>I built this portfolio website from scratch as part of my learning process in web development</p>
+            <h2>This Portfolio</h2>
+           </div>
+         </div> 
+          
 
         <div class="work-tile block-in" >
           <div class="tile-desc">
