--- a/about.html
+++ b/about.html
@@ -66,16 +66,14 @@
     <h2>About me</h2>
     <p>
       <!-- <strong>The Profession:</strong>  -->
-      I have worked as a UX/UI designer for over 7 years, leveraging my undergrad in Multimedia. I also hold a Master's degree in Marine Science & Climate Change, driven by a profound passion for the Sea and marine organisms. Despite the apparent disparity in my background, I believe it provides numerous advantages in addressing a wide range of challenges in various fields of work.
-      My career aspiration is to contribute to impactful projects with a good cause, whether in the realm of digital services or natural sciences
-      <!-- <br />
-      <br />
-      <strong>The Me:</strong> I am a guaranteed team player at work, dog parent at home, and a loner on the road. -->
+      I have 7+ years of experience working as a UX/UI designer in the tech industry and hold a MSc in Marine Science. As a strong advocate for the marine environment, I am working hard to get involved in projects, whether environmental, or technical, addressing impacts, sustainability, conservation, and animal welfare. My most recent project is the <a href="https://weboforigins.com">Web of Origins</a>, which is in its early stages of development and looking for support.
     </p>
 
     <p>
-      <small>Contact me @
-        <a href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">nhuthoangdon@gmail.com</a>
+      <small><b>Check it out <a href="https://weboforigins.com">HERE</a></b></small><br>
+      <i>or</i> <br>
+      <small><b>Contact me @
+        <a href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">nhuthoangdon@gmail.com</a></b>
       </small>
     </p>
   </div>
@@ -4352,7 +4350,7 @@
   <small class="copyright">	&#169; 2023 NHUT H. DON</small>
   <div class="footer-links">
     <a href="./index.html">Home</a>
-    <a href="./works.html">Works</a>
+    <!-- <a href="./works.html">Works</a> -->
     <a style="color: #F3425E; font-weight: 800;">About</a>
     <a href="mailto:nhuthoangdon@gmail.com?Subject=Offer%20for%20Nhut">Contact</a>
     <a href="./credits.html">Credits</a>
